# epicsapps

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  README.txt  ad_display.html  genindex.html  implementation.html  index.html  installation.html  instrument.html  instruments.html  ionchamber.html  motorsetup.html  objects.inv  other.html  overview.html  publish_docs.sh  pvlogger.html  py-modindex.html  pymsi.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  stepscan.html  stepscan_concepts.html  stepscan_gui.html  stepscan_install.html  stepscan_spec.html  stepscan_usage.html  stripchart.html  tt.yaml  usage.html  xrfcollect.html
AreaDetector_Display/: AD_Display.py  AD_Disply.py  README  ad_display.py  ad_viewer.py  camera.icns  imageview.py  pyepics_ad_display.py  requirements.txt  setup.py  setup_freeze.py  setup_py2exe.py
AreaDetector_Display/ad_display/: __init__.py  calibration_dialog.py
AreaDetector_Display/epicsad_display/: ad_config.py  ad_display.py  calibration_dialog.py  contrast_control.py  debugtime.py  imagepanel.py  pvconfig.py
AreaDetector_Display/examples/: ad_eiger.py  ad_eiger.yaml  ad_viewer.py  ad_viewer_eiger.py  gse_eiger500.yaml  gse_pilatus1m.yaml  pyepics_ad_display.py
AreaDetector_Display/lib/: __init__.py  ad_display.py  imageview.py
EigerDisplay/: run_eiger.py  setup.py
EigerDisplay/ad_eigerdisplay/: __init__.py  autocontrast_panel.py  calibration_dialog.py  calibration_panel.py  contrast_control.py  eiger_display.py  imagepanel.py
EigerDisplay/lib/: __init__.py  autocontrast_panel.py  eiger_display.py  imagepanel.py  pvconfig.py
ExampleApp/: .#st.cmd  ExampleApp.py  PVLIST_Example.TXT  example_BAK.adl  py_exapp.db  st.cmd  start_app
Instruments/: InstrumentApp.py  Instruments.bat  editframe.py  instrumentpanel.py  pyepics_instruments  pyepics_instruments.py  setup.py  setup_py2app.py  setup_py2exe.py  win_setup.py
Instruments/lib/: EpicsInstrument.py  InstrumentApp.py  __init__.py  configfile.py  creator.py  editframe.py  instrument.py  instrumentpanel.py  pvconnector.py  settingsframe.py  test.py  upgrades.py  utils.py
IonChamber/: IonChamber.db  IonChamber.py  Mucal.py  check_ionchamber.py  ionchamber.py  start_ionchamber.py
IonChamber/iocApp/: IonChamber.adl  IonChamber.db  IonChamber.req  st.cmd
LAE500/: lae500.py
Legacy/ExampleApp/: Example.db  PVLIST_Example.TXT  example.adl  py_exapp.req
MCADisplay/: setup.py
MCADisplay/lib/: __init__.py  (+1 more)
MotorSetup/: MotorSetupApp.py  create_init_motordb.py  motordb.py  mysql_settings.py  new_mysql_db.py  pyepics_motorsetup.py  setup.py  setup_py2exe.py  utils.py
Old_SampleStage/: SampleStage.bat  p1.py
SampleStage/: SampleStage.ini  SampleStage.py  StageConf.py  run_stage.py  setup.py  win_setup.py
SampleStage_v1/: SampleStage.ini  pyepics_samplestage.py  win_setup.py
StripChart/: pyepics_stripchart.py  setup.py  setup_py2app.py  setup_py2exe.py
XRFCollector/: MED_Collect.py  XRF_Collect.adl  start_xrfcollect
_sources/: ad_display.rst.txt  index.rst.txt  index.txt  installation.rst.txt  installation.txt  instrument.rst.txt  instruments.rst.txt  ionchamber.rst.txt  motorsetup.txt  pvlogger.rst.txt  stripchart.rst.txt  stripchart.txt
_static/: bizstyle.js  documentation_options.js
doc/: Makefile  ad_display.rst  conf.py  index.rst  installation.rst  instrument.rst  instruments.rst  ionchamber.rst  other.rst  publish_docs.sh  pvlogger.rst  pymsi.rst  stepscan_concepts.rst  stripchart.rst  xrfcollect.rst
epicsapp/: __init__.py  apps.py
epicsapps/: __init__.py  _version.py  apps.py
examples/: README.md
gsemicro/: microscope.db  setup.py
icons/: eiger500k.icns
installers/: GetEpicsApps.bat  GetEpicsApps.sh
py2exe/: EpicsAreaDetectorViewer.py  EpicsInstruments.py  EpicsMotorSetup_GSE.py  EpicsMotorSetup_SQLITE.py  EpicsStripchart.py  inno_setup.iss  license.txt  readme.txt  setup.py
pymsi/: dbdparser.py  dbparser.py  parserutils.py  pymsi.py  tests.py
sampleviewer/: BMD_Samplestage.py  ide_microscope.ini  ide_station.ini  micro_display.py  sample.ini  setup.py  u.py  uscope_calibrate  uscope_transfer  webcam.ini
(+179 files in other folders)
